--- a/index.html
+++ b/index.html
@@ -84,15 +84,12 @@
     
       <google-codelab-step label="日本社会が長年抱える課題" duration="5">
         <h2 is-upgraded>●先進国の中でも低い生産性</h2>
-<p class="image-container"><img style="width: 601.70px" src="img/c9b9dfca18d2826c.png"></p>
+<p class="image-container"><img style="width: 417.10px" src="img/c9b9dfca18d2826c.png"></p>
 <h2 is-upgraded>●労働生産性を高めるためには...</h2>
-<p>分母を減らす → 従業員を減らす or 労働時間を減らす</p>
-<p>分子を増やす → 付加価値の高い製品 or サービスを提供する</p>
 <aside class="special"><h2 is-upgraded>労働生産性の計算式</h2>
-<p class="image-container"><img style="width: 587.00px" src="img/af54b9b5b7b56215.png"></p>
+<p class="image-container"><img style="width: 522.50px" src="img/af54b9b5b7b56215.png"></p>
 </aside>
-<aside class="warning"><p>これらを改善するのにプログラミングは相性が良い</p>
-</aside>
+<p class="image-container"><img style="width: 859.61px" src="img/ffaebf58709c15f3.png"></p>
 
 
       </google-codelab-step>
@@ -110,10 +107,10 @@
     
       <google-codelab-step label="技術は社会を変えてきた" duration="0">
         <p>アメリカではたった13年で交通手段の主役が馬車から自動車に替わりました。</p>
-<p class="image-container"><img style="width: 264.33px" src="img/a3703a557b641a93.png"><img style="width: 63.00px" src="img/cab7d38906c13878.png"><img style="width: 263.00px" src="img/1e3181dc4cc515a7.png"></p>
+<p class="image-container"><img style="width: 723.59px" src="img/2556afce5b4a4c01.png"></p>
 <p>日本でも過去に同じようなことがありました。</p>
 <p>2008年夏にはiPhone3Gが日本で発売されたのを皮切りに右肩上がりでスマートフォンが普及していき、今日に至りました。</p>
-<p class="image-container"><img style="width: 543.00px" src="img/f60f4fb2d77ddcf5.png"></p>
+<p class="image-container"><img style="width: 549.18px" src="img/6612779818f09d88.png"></p>
 <aside class="warning"><p>新たな技術の登場で世の中はガラッと変わる可能性を秘めています。</p>
 <p>同様にコンピュータやプログラミングの力は社会を大きく変えると思いませんか？</p>
 </aside>
@@ -142,6 +139,7 @@
         <h2 is-upgraded>行政の力だけでは解決できない社会の困ったを<a href="https://www.sumave.com/20190924_13529/" target="_blank">ITの力で解決</a></h2>
 <p>→ゴミの収集日や捨て方をスマホで簡単にわかる<a href="http://5374.jp/" target="_blank">アプリ</a></p>
 <p>→保育園の情報が検索できる<a href="http://papamama.codeforsapporo.org/" target="_blank">地図</a></p>
+<p>→大学のサーバが停止してしまったので新入生が代わりの<a href="https://www.itmedia.co.jp/news/articles/2104/13/news126.html" target="_blank">ツールを開発</a></p>
 <aside class="warning"><p>技術の力で世の中をちょっと良くする素晴らしさ....</p>
 </aside>
 
