--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <iframe class="youtube-video" src="https://www.youtube.com/embed/XkKxSAb4EAw?rel=0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <h2 is-upgraded>●福岡県のクリーニング店</h2>
 <p>受付を無人化するために自動で衣類を判別</p>
-<iframe class="youtube-video" src="https://www.youtube.com/embed/vCUk7zkzDQw" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe class="youtube-video" src="https://www.youtube.com/embed/vCUk7zkzDQw?rel=0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <h2 is-upgraded>●千葉県のパン屋</h2>
 <p>種類の多いパンをAIで自動認識して会計をスムーズに行う</p>
 <iframe class="youtube-video" src="https://www.youtube.com/embed/eZtkiR-R-gs?rel=0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
