--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
       </google-codelab-step>
     
-<google-codelab-step label="生産現場で活用されるAI" duration="0">
+<google-codelab-step label="現代社会で活用されるAI" duration="0">
 <h2 is-upgraded>●静岡県のきゅうり農家</h2>
 <p>人手に頼った等級判別は作業者により等級にバラつきがでる...どうにかできないか...</p>
 <iframe class="youtube-video" src="https://www.youtube.com/embed/XkKxSAb4EAw?rel=0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
