--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
 <p>×理系の人だけが勉強する学問</p>
 <h2 is-upgraded>こんなイメージを持っていたら捨てちゃいましょう。</h2>
 <p>【参考】NASAの月面着陸を支えた女性プログラマー </p>
-<p>→　<a href="https://ja.wikipedia.org/wiki/%E3%83%9E%E3%83%BC%E3%82%AC%E3%83%AC%E3%83%83%E3%83%88%E3%83%BB%E3%83%8F%E3%83%9F%E3%83%AB%E3%83%88%E3%83%B3_(%E7%A7%91%E5%AD%A6%E8%80%85)" target="_blank">マーガレット・ハミルトン</a> →　<a href="https://www.amazon.co.jp/%E6%9C%88%E3%81%A8%E3%82%A2%E3%83%9D%E3%83%AD%E3%81%A8%E3%83%9E%E3%83%BC%E3%82%AC%E3%83%AC%E3%83%83%E3%83%88-%E6%9C%88%E7%9D%80%E9%99%B8%E3%82%92%E3%81%95%E3%81%95%E3%81%88%E3%81%9F%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9E%E3%83%BC-%E5%85%90%E7%AB%A5%E5%9B%B3%E6%9B%B8%E9%A4%A8%E3%83%BB%E7%B5%B5%E6%9C%AC%E3%81%AE%E9%83%A8%E5%B1%8B-%E3%83%AB%E3%83%BC%E3%82%B7%E3%83%BC-%E3%83%8A%E3%82%A4%E3%82%BA%E3%83%AA%E3%83%BC/dp/4566080366" target="_blank">生徒もわかりやすい絵本</a></p>
+<p>→　<a href="https://ja.wikipedia.org/wiki/%E3%83%9E%E3%83%BC%E3%82%AC%E3%83%AC%E3%83%83%E3%83%88%E3%83%BB%E3%83%8F%E3%83%9F%E3%83%AB%E3%83%88%E3%83%B3_(%E7%A7%91%E5%AD%A6%E8%80%85)" target="_blank">マーガレット・ハミルトン</a></p>
+<p>→　<a href="https://www.amazon.co.jp/%E6%9C%88%E3%81%A8%E3%82%A2%E3%83%9D%E3%83%AD%E3%81%A8%E3%83%9E%E3%83%BC%E3%82%AC%E3%83%AC%E3%83%83%E3%83%88-%E6%9C%88%E7%9D%80%E9%99%B8%E3%82%92%E3%81%95%E3%81%95%E3%81%88%E3%81%9F%E3%83%97%E3%83%AD%E3%82%B0%E3%83%A9%E3%83%9E%E3%83%BC-%E5%85%90%E7%AB%A5%E5%9B%B3%E6%9B%B8%E9%A4%A8%E3%83%BB%E7%B5%B5%E6%9C%AC%E3%81%AE%E9%83%A8%E5%B1%8B-%E3%83%AB%E3%83%BC%E3%82%B7%E3%83%BC-%E3%83%8A%E3%82%A4%E3%82%BA%E3%83%AA%E3%83%BC/dp/4566080366" target="_blank">生徒もわかりやすい絵本</a></p>
 
 
       </google-codelab-step>
