--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
 <ul class="checklist">
 <li>プログラミングは専門家だけのもの？</li>
 <li>今どきの子供たち</li>
-<li>これからの日本はどうなるの？</li>
-<li>日本は先進国か？経済大国か？</li>
+<li>これから直面する日本の課題</li>
+<li>これからの日本が目指すべき社会</li>
+<li>現代社会で活用されるAI</li>
 </ul>
 
 
