--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     
       <google-codelab-step label="まとめ" duration="0">
         <aside class="warning"><p>●これからの社会を支えて行くにはコンピュータやプログラミングの力は必要不可欠</p>
-<p>●コンピュータの特性を理解し、広く活用していくには早いほうが良い</p>
+<p>●コンピュータの特性を理解し、広く活用していくには小学生段階から取り組む必要があるのではないか...</p>
 <p>→<a href="http://fu-syou.miyakyo-u.ac.jp/0930%20csrennkei.pdf" target="_blank">宮城教育大学附属小学校でのコンピュータサイエンス教育の取組</a></p>
 <p>●プログラミング教育でジェンダーギャップを生じないために...</p>
 <p>→<a href="https://www.tokyo-np.co.jp/article/70707" target="_blank">ITジェンダーギャップは中学・高校で生まれる？ 女子に特化した教室が未来を開く</a></p>
